deployment/helm_charts/redpanda/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: redpanda-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTP
      port: 80
      name: web-rp
      allowedRoutes:
        namespaces:
          from: All
---

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redpanda-console-route
  namespace: redpanda
spec:
  parentRefs:
    - name: redpanda-gateway
      namespace: default
      # sectionName: web-rp
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: redpanda-console
          port: 8080
